# training-edge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
api/: __init__.py  app.py
docs/: ARCHITECTURE.md  BUGFIX_LOG.md  DECISIONS.md  IO.md  PRD.md  SECURITY_CHECKLIST.md  UI_UX_SPEC.md  WIREFRAMES_V1.md
engine/: __init__.py  auth.py  calendar.py  config.py  database.py  fit_parser.py  inbody_ocr.py  intervals.py  llm_client.py  metrics.py  plan_generator.py  readiness.py  sync.py  validator.py
scripts/: cli.py  install.sh
tests/: test_database.py  test_metrics.py
web/templates/: activity.html  base.html  body_data.html  dashboard.html  login.html  plan.html  settings.html
