[project]
name = "training-edge"
version = "0.6.0"
description = "Self-hosted sports analytics — FIT parsing, training metrics, and AI-ready API"
requires-python = ">=3.10"
dependencies = [
    "fitparse>=1.2.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
    "garminconnect>=0.2.8",
    "requests>=2.31",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",          # for testing FastAPI
]

[tool.setuptools.packages.find]
include = ["engine*", "api*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
